Fix nav overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ nav {position: absolute; right: 0; width: 330px; height: 100%; z-index: 1000; ba
 nav {color: white;}
 nav a {color: white; text-decoration: none;}
 nav #controls {padding: 20px 10px 30px 15px;}
+nav h3 {margin-bottom: 5px;}
 
 /* Controls */
 #controls #year {width: 200px; margin-bottom: 30px;}
